# termina

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-02T21-37-46Z__frontend-src.md
.impeccable/live/: config.json
.serena/: project.yml
backend/: .dockerignore  .env.example  :testmemory:  Dockerfile  conftest.py  pyproject.toml
backend/create_db_and_tables/caldav/: client.py
backend/fetch_event_ical/: sync.py
backend/scripts/: cleanup_duplicate_overrides.py
backend/src/app/: __init__.py  config.py  ics.py  main.py  scheduler.py
backend/src/app/api/: __init__.py  admin_users.py  auth.py  calendars.py  events.py  ics_api.py  sync_api.py
backend/src/app/auth/: dependencies.py  router.py  security.py  service.py
backend/src/app/caldav/: __init__.py  client.py  recurrence.py  sync.py  write.py
backend/src/app/db/: __init__.py  models.py  session.py
backend/tests/: test_caldav_write_dt_equal.py  test_health.py  test_ics_import_export.py  test_phase1_sync.py  test_phase2_api.py  test_phase5_api.py  test_recurrence.py  test_repro_position_bug.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  calendar.css  dnd.css  index.css  layout.css  main.tsx  (+3 more)
(+28 files in other folders)
